# STS

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/sts/: __init__.py  cli.py  transcriber.py  vac.py  web_app.py
src/sts/templates/: index.html
tests/: test_transcriber.py
