[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sts"
version = "0.1.0"
description = "Speech-to-text using OpenAI Whisper"
authors = [{name = "Pavel Mackevic"}]
dependencies = [
    "faster-whisper>=0.10.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"